set(THIRDPARTY_BUILD_TYPE "STATIC" CACHE STRING "Library type: STATIC, OBJECT, or SHARED")

# Validate input
if(NOT THIRDPARTY_BUILD_TYPE IN_LIST ALLOWED_TYPES)
    set(ALLOWED_TYPES STATIC OBJECT SHARED)
    if(NOT THIRDPARTY_BUILD_TYPE IN_LIST ALLOWED_TYPES)
        message(FATAL_ERROR "Invalid value for THIRDPARTY_BUILD_TYPE: ${THIRDPARTY_BUILD_TYPE}. Allowed: ${ALLOWED_TYPES}")
    endif()
endif()

set(THIRDPARTY_SOURCES thirdparty.cpp)
set(THIRDPARTY_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

if(THIRDPARTY_BUILD_TYPE STREQUAL "STATIC")
    add_library(thirdparty STATIC ${THIRDPARTY_SOURCES})
elseif(THIRDPARTY_BUILD_TYPE STREQUAL "OBJECT")
    add_library(thirdparty OBJECT ${THIRDPARTY_SOURCES})
elseif(THIRDPARTY_BUILD_TYPE STREQUAL "SHARED")
    add_library(thirdparty SHARED ${THIRDPARTY_SOURCES})
endif()

target_include_directories(thirdparty PUBLIC ${THIRDPARTY_INCLUDE_DIR})
